# pii_anonymizer

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
pii_anonymizer/: hosting.py
pii_anonymizer/generators/: credit_card_generator.py  datetime_generator.py  email_generator.py  generator_base.py  generator_remember_base.py  ip_address_generator.py  label_generator.py  mask_generator.py  name_generator.py  phone_generator.py
pii_anonymizer/models/: text_analyzed_result.py  text_anonymized_result.py
pii_anonymizer/protocols/: i_text_analyzer.py  i_text_anonymizer.py
pii_anonymizer/services/: presidio_text_analyzer.py  presidio_text_anonymizer.py
samples/: main.py
tests/pii_anonymizer/generators/: test_credit_card_generator.py  test_date_generator.py  test_email_generator.py  test_ip_address_generator.py  test_label_generator.py  test_mask_generator.py  test_name_generator.py  test_phone_generator.py
tests/pii_anonymizer/models/: test_text_analyzed_result.py  test_text_anonymized_result.py
tests/pii_anonymizer/services/: test_presidio_text_analyzer.py  test_presidio_text_anonymizer.py
